<resources>
    <string name="app_name">SubscriberApp</string>

    <string name="item_home">Home</string>
    <string name="item_reply">Reply</string>
    <string name="item_chat">Chat</string>
    <string name="item_profile">Profile</string>
    <string name="item_more">More</string>


    <string name="search_txt">Search...</string>

    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>


    <!--question reply-->
    <string name="reply_msg">Verify your answer before submit, answer not allowed to after submit.</string>
    <string name="type_ans">Type your answer.</string>

    <!--profile fragment-->
    <string name="profile_name">Name</string>
    <string name="profile_address">Address</string>
    <string name="profile_pincode">Pincode</string>
    <string name="profile_city">City</string>
    <string name="profile_email">Email</string>
    <string name="profile_number">Number</string>
    <string name="update_profile">Update Profile</string>

    <!--more fragment-->
    <string name="about">About App</string>
    <string name="policy">Privacy Policy</string>
    <string name="term">Terms and Condition</string>
    <string name="share">Share App</string>
    <string name="download">Download Our App</string>
    <string name="rate">Rate Us</string>


    <!--login xml-->
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <!--register xml-->
    <string name="register_now">Register Now</string>
    <string name="register_user_name">Enter your user name</string>
    <string name="register_email">Enter your e-mail id</string>
    <string name="register_contact">Enter your mobile no</string>
    <string name="register_password">Enter your password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_user_photo">Upload profile picture</string>

    <string name="forgot_msg">Please Enter Your Register Mobile No.</string>
    <string name="title_activity_validation">Sign in</string>

    <string name="new_pass_msg">Enter Your New Password.</string>
    <string name="new_pass_btn">Create New</string>


    <string name="sign_up_detil_msg">Enter Signup Detail.</string>
    <string name="sign_up_detil_btn">Save</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!--OTP xml-->
    <string name="otp_msg">We send verification OTP code in your mail id, Please check now!</string>

</resources>
